// cmd: protoc --go_out=. --go_opt=paths=source_relative     --go-grpc_out=. --go-grpc_opt=paths=source_relative ./greeter.proto 
syntax = "proto3";

package greeter;

option go_package = "./greeter";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  // Sends another greeting
  rpc SayHelloAgain (HelloRequest) returns (stream HelloReply) {}
  rpc SayHelloReverse (stream HelloRequest) returns (HelloReply) {}
  rpc SayHelloBidirectional (stream HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}